‘Dead code’ removed. DB queries for PDF reports and CSV output improved. Added a ‘cache’ to the external IP lookup. ChartDraw improved. Additional JUnit tests added. Various improvements taken from the local repository (originally intended for post-release).